<resources>
    <string name="app_name">Keep Fit</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="welcome_user">Welcome userProfile</string>
    <string name="sign_up_to_join">Sign up to join</string>
    <string name="email_hint">e.g. david@gmail.com</string>
    <string name="i_agree_to_the_terms_of_service">I agree to the Terms of Service</string>
    <string name="confirm">Confirm</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="name_hint">ie. David Adebola</string>
    <string name="next">Next</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="match">Match</string>
    <string name="enter_details">Enter Details</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="goals">Goals</string>
    <string name="level">Level</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="email_sent">We\'ve sent your verification code to \n ******@gmail.com</string>
    <string name="enter_code">Enter code</string>
    <string name="verify">Verify</string>
    <string name="verify_fragment_sign_in_link">Have an account? Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="bellamy_gmail_com">bellamy@gmail.com</string>
    <string name="send">Send</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account_sign_in">Have an account? Sign in</string>
    <string name="home_page_to_be_implemented_later">Home Page. To be implemented later</string>
    <string name="all">All</string>
    <string name="keep_fit_matches">Keep Fit Matches</string>
    <string name="most_popular">Most Popular</string>
    <string name="search">Search</string>
    <string name="fitness_programmes">Fitness Programmes</string>
    <string name="fitness_n_programmes">Fitness \n Programmes</string>
    <string name="programmes">Programmes</string>
    <string name="nutritional">Nutritional</string>
    <string name="fitness">Fitness</string>
    <string name="groups_15">Groups(15)</string>
    <string name="physio_active_n_t_t_t_46">Physio Active \n \t \t \t (46)</string>
    <string name="t_t_fitness_n_programmes">\t \t Fitness \n Programmes</string>
    <string name="liveFitness">Live</string>
    <string name="fitnessProgramme">Training</string>
    <string name="train_with_a_champion">Train with a champion</string>
    <string name="access_now">Access now</string>
    <string name="challenges">Challenges</string>
    <string name="my_photos">My Photos</string>
    <string name="my_videos">My Videos</string>
    <string name="products">Products</string>
    <string name="good_morning">Good Morning</string>
    <string name="david">David</string>
    <string name="t_t_218_n_sessions">\t \t 0 \n Sessions</string>
    <string name="splash_screen_image">Splash screen image</string>
    <string name="get_started">Get started</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="by_continuing_you_accept_our_terms_of_service">By continuing you accept our Terms of Service</string>
    <string name="top_3_fitness_goals">Top 3 Fitness Goals</string>
    <string name="muscular_endurance">Muscular endurance</string>
    <string name="muscular_strength">Muscular Strength</string>
    <string name="cardiovascular_endurance">Cardiovascular Endurance</string>
    <string name="flexibility">Flexibility</string>
    <string name="body_composition">Body Composition</string>
    <string name="fat_loss">Fat Loss</string>
    <string name="improve_mental_health">Improve Mental Health</string>
    <string name="tone_up">Tone Up</string>
    <string name="muscle_gain">Muscle Gain</string>
    <string name="how_often_do_you_train_per_week">How often do you train Per Week?</string>
    <string name="_1_2_days">1–2 Days</string>
    <string name="_3_4_days">3–4 Days</string>
    <string name="_5_days">5+ Days</string>
    <string name="pick_your_diet">Pick Your Diet</string>
    <string name="classic">Classic</string>
    <string name="others_please_specify">Others please specify</string>
    <string name="shellfish">Shellfish</string>
    <string name="gluten">Gluten</string>
    <string name="diary">Diary</string>
    <string name="peanut">Peanut</string>
    <string name="tree_nut">Tree Nut</string>
    <string name="soy">Soy</string>
    <string name="any_allergies">Any Allergies</string>
    <string name="nut">Nut</string>
    <string name="sh_fish">Sh.Fish</string>
    <string name="egg">Egg</string>
    <string name="mustard">Mustard</string>
    <string name="sesame">Sesame</string>
    <string name="sulfite">Sulfite</string>
    <string name="nightshade">NightShade</string>
    <string name="please_identify_injuries">Please Identify injuries</string>
    <string name="if_none_click_none">(If none, click none)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="david_adebola">David Adebola</string>
    <string name="beginner">Beginner</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="folder_icon">Folder icon</string>
    <string name="general">General</string>
    <string name="account_and_synchronization">Account and Synchronization</string>
    <string name="productivity">Productivity</string>
    <string name="plan_and_goals">Plan and goals</string>
    <string name="upgrade_to_premium">Upgrade to premium</string>
    <string name="get_more_features">Get more features</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="userProfile">User</string>
    <string name="fitness_9_year_journey">Fitness . 9 Year Journey</string>
    <string name="available">Available</string>
    <string name="edit">Edit</string>
    <string name="specialities">Specialities</string>
    <string name="verified_by_dwayne_johnson">Verified by Dwayne Johnson</string>
    <string name="lose_weight_and_get_toned">Lose weight and get toned</string>
    <string name="gain_flexibility">Gain flexibility</string>
    <string name="build_muscle_and_boost_stamina">Build muscle and boost stamina</string>
    <string name="athletic_event_or_competition">Athletic event or competition</string>
    <string name="other_injuries_or_medical_conditions">Other injuries or medical conditions</string>
    <string name="gallery">Gallery</string>
    <string name="schedule">Schedule</string>
    <string name="bullet_list_item">bullet list item</string>
    <string name="description">Description</string>
    <string name="description_long">Hey! My name is David. I\'m an avid gym userProfile and have been for 9 years. Strength Training and core workouts are my favorite|</string>
    <string name="your_recent_activity">Your Recent Activity</string>
    <string name="you_just_completed_a_1_hour_run">You just completed a 1 hour run</string>
    <string name="badges">Badges</string>
    <string name="see_all"><![CDATA[See all >]]></string>
    <string name="level_42">Level 42</string>
    <string name="productivity_icon">Productivity icon</string>
    <string name="upgrade_icon">Upgrade icon</string>
    <string name="about_icon">About icon</string>
    <string name="logout_icon">Logout icon</string>
    <string name="arrow_icon">Arrow icon</string>
    <string name="choose_fitness_n_programmes">Choose Fitness \n Programmes</string>
    <string name="choose_n_nutrition_plans">Choose \n Nutrition Plans</string>
    <string name="hello_nice_to_meet_n_you_david">Hello, nice to meet \n you David!</string>
    <string name="set_your_location">Set your location to find fitnessProgramme spots around you</string>
    <string name="use_current_location">Use current location</string>
    <string name="we_only_use">We only access your location while you are using the Keep Fit app</string>
    <string name="or_set_your_location_manually">or set your location manually</string>
    <string name="challenge_of_the_week">Challenge of the week</string>
    <string name="wall_squats">Wall Squats</string>
    <string name="test_the_strength_of_your_squats">Test the strength of your squats</string>
    <string name="total_1000_squats">Total: 1000 Squats</string>
    <string name="total_duration_25_minutes">Total Duration 25 minutes</string>
    <string name="progress">Progress</string>
    <string name="start">Start</string>
    <string name="my_groups">My Groups</string>
    <string name="delete_icon">Delete icon</string>
    <string name="group_image">Group image</string>
    <string name="walkout">Walkout</string>
    <string name="feeds">Feeds</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="check_icon">Check icon</string>
    <string name="headline_icon">Headline icon</string>
    <string name="forward_icon">Forward_icon</string>
    <string name="adjust_icon">Adjust icon</string>
    <string name="person_add_icon">Person add icon</string>
    <string name="icon">Icon</string>
    <string name="cancel">Cancel</string>
    <string name="add_icon">Add icon</string>
    <string name="location_icon">Location icon</string>
    <string name="verified_icon">Verified icon</string>
    <string name="waiting_to_accept">Waiting to accept</string>
    <string name="account">Account</string>
    <string name="body_building">Body Building</string>
    <string name="suggested_classes">SUGGESTED CLASSES</string>
    <string name="view">View</string>
    <string name="categories">Categories</string>
    <string name="notes">Notes</string>
    <string name="suggested">SUGGESTED</string>
    <string name="sessions">Sessions |</string>
    <string name="weeks">weeks</string>
    <string name="live">Live</string>
    <string name="search_amp_n_match_126"><![CDATA[Search & \n Match (126)]]></string>
    <string name="nutritional_n_plans_32">Nutritional \n Plans (32)</string>
    <string name="fitness_n_buddies_26">Fitness \n Buddies (26)</string>
    <string name="search_amp_n_match"><![CDATA[Search & \n Match]]></string>
    <string name="nutritional_n_plans">Nutritional \n Plans</string>
    <string name="fitness_n_buddies">Fitness \n Buddies</string>
    <string name="physio_active">Physio Active</string>
    <string name="live_n_fitness">Live \n Fitness</string>
    <string name="groups">Groups</string>
    <string name="training_n_spots">Training \n Spots</string>
    <string name="running">Running</string>
    <string name="boxing">Boxing</string>
    <string name="hiking">Hiking</string>
    <string name="swimming">Swimming</string>
    <string name="cycling">Cycling</string>
    <string name="pilates">Pilates</string>
    <string name="circuit_training">Circuit Training</string>
    <string name="tennis">Tennis</string>
    <string name="vegan">Vegan</string>
    <string name="paleo">Paleo</string>
    <string name="keto">Keto</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="submit">Submit</string>
</resources>