<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_details"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"/>

    <Button
        android:id="@+id/age_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop ="30dp"
        android:text="@string/age"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/height_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop ="30dp"
        android:text="@string/height"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/weight_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop ="30dp"
        android:text="@string/weight"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/goals_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/goals"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/level_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/level"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/confirm_details_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/confirm_details"/>

</LinearLayout>