<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_user"
            android:textSize="24sp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_to_join"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:autofillHints="name"
            android:inputType="text"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:autofillHints="name"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textSize="16sp"
            android:padding="5dp"
            android:background="@drawable/edit_text_background"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/agree_terms_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_to_the_terms_of_service"
                android:layout_weight="1"/>

        </LinearLayout>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/confirm"/>

        <TextView
            android:id="@+id/sign_in_link_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/have_an_account_sign_in"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/error_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>