<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_3_fitness_goals"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fitness_goal_list_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_often_do_you_train_per_week"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weekly_training_duration_list_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_your_diet"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/classic"
                android:textSize="16sp"
                android:padding="10dp"
                android:background="@color/primary"
                android:layout_marginBottom="300dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/others_please_specify"
                android:textSize="20sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:padding="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/any_allergies"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/allergy_list_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/please_identify_injuries"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/if_none_click_none"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/skeleton" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:text="@string/confirm_details"/>

    <TextView
        android:id="@+id/error_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>