<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/favorite_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_outline_favorite_border_24"
        android:layout_gravity="end"
        android:contentDescription="@string/favorite_icon"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/check_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_check_circle_outline_24"
        android:layout_gravity="end"
        android:contentDescription="@string/check_icon"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/headline_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_view_headline_24"
        android:layout_gravity="end"
        android:contentDescription="@string/headline_icon"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/forward_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_forward_24"
        android:layout_gravity="end"
        android:contentDescription="@string/forward_icon"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/adjust_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_adjust_24"
        android:layout_gravity="end"
        android:contentDescription="@string/adjust_icon"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/person_add_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_outline_person_add_alt_1_24"
        android:layout_gravity="end"
        android:contentDescription="@string/person_add_icon"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/contactless_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_outline_contactless_24"
        android:layout_gravity="end"
        android:contentDescription="@string/icon"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/details_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

</LinearLayout>