<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/enter_your_name"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:autofillHints="name"
        android:inputType="text"
        android:textSize="18sp"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"/>

    <Button
        android:id="@+id/next_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="20dp" />

</LinearLayout>